--- a/Program/SIT_UAT_iTX/pom.xml
+++ b/Program/SIT_UAT_iTX/pom.xml
@@ -6,6 +6,7 @@
 	<artifactId>iTX</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+
 	<properties>
 		<!-- Generic properties -->
 		<Java-Ver>1.8</Java-Ver>
@@ -45,6 +46,7 @@
 		<Commons-IO-Ver>2.6</Commons-IO-Ver>
 		<Commons-BeanUtils-Ver>1.9.3</Commons-BeanUtils-Ver>
 		<Commons-Text-Ver>1.8</Commons-Text-Ver>
+		<Xz-Ver>1.9</Xz-Ver>
 		<Commons-FileUpload-Ver>1.4</Commons-FileUpload-Ver>
 		<Jackson-Databind-Ver>2.9.9</Jackson-Databind-Ver>
 		<Apache-POI-Ver>4.1.2</Apache-POI-Ver>
@@ -332,9 +334,10 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		  <groupId>com.oracle.database.jdbc</groupId>
-		  <artifactId>ojdbc8</artifactId>
-		  <version>19.3.0.0</version>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>19.3.0</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- hibernate -->
@@ -430,6 +433,12 @@
 			<artifactId>commons-text</artifactId>
 			<version>${Commons-Text-Ver}</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.tukaani</groupId>
+    		<artifactId>xz</artifactId>
+    		<version>${Xz-Ver}</version>
+		</dependency>
 
 		<!-- iText -->
 		<dependency>
@@ -449,7 +458,6 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.49</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
