--- a/Program/PT2_iTX/pom.xml
+++ b/Program/PT2_iTX/pom.xml
@@ -588,7 +588,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.0</version>
 				<configuration>
-					<outputDirectory>D:\SKL\git\SKL_LOAN\Program\war\SIT_UAT\</outputDirectory>
+					<outputDirectory>D:\PKG\war\SIT_UAT\</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
